--- a/styles/visual_effects.css
+++ b/styles/visual_effects.css
@@ -1,14 +1,10 @@
 #lightning-flash {
     position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
     pointer-events: none;
     inset: 0;
     background: white;
     opacity: 0;
-    mix-blend-mode: overlay; /* Makes it brighten instead of turning white */
+    mix-blend-mode: overlay;
     transition: opacity 0.2s ease-out;
-    z-index: 5; /* Above bg, under content */
+    z-index: 5;
 }
